# SteelMC

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  PLAYER_ENTITY_REFACTOR_REMAINING.md  _typos.toml  crates.js  docker-compose.yml  help.html  settings.html  src-files.js
.cargo/: config.toml
package-content/: config.schema.json  config.toml
search.index/: 0001d21734.js  0004f9d869.js  0005b8717c.js  001da8f777.js  002cb1e31b.js  0033e295a1.js  003d45ee6f.js  003fff8dd4.js  004bcd4c73.js  00580983ec.js  00628a6662.js  0067a09e66.js  006adc9712.js  007766d65e.js  0087a27da9.js  0096dbd0d0.js  00a5988fe9.js  00c5319062.js  00da0bdd7d.js  00dc275f37.js  00f44e5e98.js  00feaddb85.js  01064f90c1.js  010fc8ec68.js  01123135d8.js  011847e120.js  011b6c0e2d.js  012228b04d.js  0137d83b3d.js  013a364865.js  014ce0292e.js  015760eb66.js  015b4f0864.js  016fd4027c.js  0174f7b45f.js  01793a82b8.js  017f7b7575.js  01892ca7c3.js  018b6ab8d1.js  01921aaf99.js  (+3815 more)
steel/: Cargo.toml  all.html  enum.SteelServerError.html  index.html  sidebar-items.js  static.SERVER.html  struct.SteelServer.html
steel-macros/: Cargo.toml
steel-macros/src/: build_block_items.rs
steel-worldgen/: Cargo.toml
steel-worldgen/build_assets/: multi_noise_biome_source_parameters.json
steel-worldgen/src/: surface.rs
steel-worldgen/src/biomes/: biome_source.rs  climate_sampler.rs  nether_climate_sampler.rs
steel-worldgen/src/density/: traits.rs
steel-worldgen/src/noise/: aquifer.rs  beardifier.rs  blended_noise.rs  improved_noise.rs  noise_chunk.rs  normal_noise.rs  perlin_noise.rs
steel-worldgen/src/structure/: desert_pyramid.rs  end_city.rs  fortress.rs  generator.rs  igloo.rs  jigsaw.rs  mansion.rs  mineshaft.rs  nether_fossil.rs  ocean_monument.rs  ocean_ruin.rs  piece.rs  placement.rs  ruined_portal.rs  shipwreck.rs  single_piece.rs  stronghold.rs  utils.rs
steel-worldgen/src/structure/types/: structure_ref.rs
steel/config/: constant.DEFAULT_CONFIG.html  constant.DEFAULT_FAVICON.html  constant.DEFAULT_WORLDS.html  enum.LogLevel.html  enum.LogTimeFormat.html  enum.RotationTimeFormat.html  fn.default_log_file.html  fn.default_log_path.html  fn.default_max_history.html  fn.default_spam_threshold_seconds.html  fn.empty_worlds_config.html  fn.load_or_create.html  fn.load_or_create_worlds.html  fn.validate.html  index.html  sidebar-items.js  struct.LogConfig.html  struct.ServerConfig.html  struct.SteelConfig.html  struct.ThreadConfig.html
steel/logger/: enum.Move.html  fn.terminal_height.html  fn.terminal_width.html  index.html  sidebar-items.js  struct.CommandLogger.html  struct.LoggerLayer.html
steel/logger/file/: index.html  sidebar-items.js  struct.LogFile.html
steel/logger/history/: index.html  struct.History.html
steel/logger/input/: enum.ExtendedKey.html  fn.copy_to_clipboard.html  fn.next.html  fn.previous.html  fn.send_state.html  index.html  sidebar-items.js
steel/logger/output/: index.html  struct.Output.html
steel/logger/selection/: index.html  sidebar-items.js  struct.Selection.html
steel/logger/state/: index.html  sidebar-items.js  struct.LogState.html
steel/logger/suggestions/: index.html  sidebar-items.js  struct.Completer.html
steel/src/: config.rs  lib.rs  main.rs
steel/src/logger/: file.rs  history.rs  input.rs  mod.rs  output.rs  state.rs  suggestions.rs
steel/src/spawn_progress/: mod.rs
steel_core/: all.html  index.html  sidebar-items.js
steel_crypto/: all.html  constant.RSA_KEY_BITS.html  constant.SIGNATURE_BYTES.html  constant.SIGNING_ALGORITHM.html  index.html  sidebar-items.js
steel_login/: all.html  enum.AuthError.html  enum.ConnectionUpdate.html  enum.GameProfileAction.html  enum.TextureError.html  fn.is_valid_player_name.html  fn.mojang_authenticate.html  fn.offline_uuid.html  fn.signed_bytes_be_to_hex.html  index.html  sidebar-items.js  struct.ClientInformation.html  struct.GameProfile.html  struct.JavaConnection.html  struct.JavaTcpClient.html  struct.ServerConnectionSession.html
steel_macros/: all.html  attr.block_behavior.html  attr.entity_behavior.html  attr.entity_impl.html  attr.item_behavior.html  constant.ALLOWED_TYPES.html  constant.UNSUPPORTED_READ_PROP.html  constant.UNSUPPORTED_WRITE_PROP.html  constant.WRONG_READ_FORMAT.html  constant.WRONG_WRITE_FORMAT.html  derive.ClientPacket.html  derive.ReadFrom.html  derive.ServerPacket.html  derive.WriteTo.html  fn.expand_known_type.html  fn.generate_read_code.html  fn.generate_write_code.html  fn.parse_read_attributes.html  fn.parse_struct_read_attributes.html  fn.parse_struct_write_attributes.html  fn.parse_write_attributes.html  fn.read_from_enum.html  fn.read_from_struct.html  fn.write_to_enum.html  fn.write_to_struct.html  index.html  sidebar-items.js  struct.FieldReadAttributes.html  struct.FieldWriteAttributes.html  struct.Strategy.html
steel_math/: all.html  constant.GRADIENT.html  constant.GRADIENT_4.html  fn.bias_towards_extreme.html  fn.clamp.html  fn.clamp_i32.html  fn.clamped_lerp.html  fn.clamped_lerp_simd.html  fn.corner_noise_3d.html  fn.cube.html  fn.dot.html  fn.fast_floor.html  fn.fast_floor_simd.html  fn.fast_lfloor.html  fn.grad_dot.html  fn.grad_dot_4x.html  fn.grad_dot_simd.html  fn.inverse_lerp.html  fn.lerp.html  fn.lerp2.html  fn.lerp2_simd.html  fn.lerp3.html  fn.lerp3_simd.html  fn.lerp_simd.html  fn.map.html  fn.map_clamped.html  fn.smoothstep.html  fn.smoothstep_derivative.html  fn.smoothstep_simd.html  fn.square.html  fn.wrap.html  fn.wrap_simd.html  index.html  sidebar-items.js
steel_protocol/: all.html  index.html  sidebar-items.js
steel_registry/: all.html  constant.BANNER_PATTERN_REGISTRY.html  constant.BIOMES_REGISTRY.html  constant.BLOCKS_REGISTRY.html  constant.BLOCK_ENTITY_TYPE_REGISTRY.html  constant.CAT_SOUND_VARIANT_REGISTRY.html  constant.CAT_VARIANT_REGISTRY.html  constant.CHAT_TYPE_REGISTRY.html  constant.CHICKEN_SOUND_VARIANT_REGISTRY.html  constant.CHICKEN_VARIANT_REGISTRY.html  constant.CONFIGURED_CARVER_REGISTRY.html  constant.CONFIGURED_FEATURE_REGISTRY.html  constant.COW_SOUND_VARIANT_REGISTRY.html  (+53 more)
steel_utils/: all.html  (+8 more)
(+28892 files in other folders)
