[package]
name = "steel-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
# Proc macros
syn = { workspace = true, features = ["full"] }
quote.workspace = true
proc-macro2.workspace = true

[lints]
workspace = true
